	  NumLock is off. (DLR)
	- Translate extended keypad keys to their ASCII equivalents even
	  when we hit Escape once or twice before typing them, for
	  consistency. (DLR)
	- If they're defined, translate KEY_SUP into NANO_PREVLINE_KEY
	  and KEY_SDOWN into NANO_NEXTLINE_KEY, since they are sometimes
	  generated by Shift-Up and Shift-Down. (DLR)
  parse_escape_seq_kbinput()
	- Handle unknown and unignored escape sequences once here
	  instead of twice in parse_kbinput(). (DLR)
	- Don't ignore escape sequences anymore.  Instead, return the
	  corresponding key so that parse_kbinput() can translate it.
	  (DLR)
  display_string()
	- Properly handle buf[start_index]'s being a null terminator.
	  (DLR)
  titlebar()
	- Don't display overly long filenames with ellipses if the
	  number of columns is extremely small. (DLR)
	- Don't display any blank space for the state if we're in the
	  file browser, as Pico doesn't. (DLR)
- configure.ac:
	- If regex.h isn't found, display an error message if we try to
	  enable color support. (DLR)
	- Fix the spacing of the error message displayed when slcurses.h
	  isn't found. (DLR)
	- If we use the --disable-wrapping option, ignore the
	  --disable-wrapping-as-root option. (DLR)
	- Add minor cosmetic tweaks. (DLR)
- doc/Makefile.am:
	- Don't include nanorc.sample in EXTRA_DIST, as it's only useful
	  when we're building from source, as opposed to building a
	  distribution. (DLR)
	- Tweak to remove usage of the += operator again. (DLR)
- doc/man/Makefile.am:
	- Tweak to remove usage of the += operator again. (DLR)
- doc/faq.html:
	- Update section 5.3 again to not state "the latest development
	  version" before 1.3.12, as it's no longer accurate. (DLR)
	- Add some minor spacing fixes. (DLR)
- doc/nano.texi:
	- Add missing description of the -O/--morespace command line
	  option. (DLR)
- doc/syntax/c.nanorc:
	- Since .i and .ii are preprocessed C and C++ output, colorize
	  them here. (Mike Frysinger)
- doc/syntax/ruby.nanorc: